Redesign charging view with Nordic light theme and dark mode support
- Completely redesign ChargingView with a modern Nordic-light aesthetic
- Add new charging-view.css with comprehensive light and dark theme styles
- Replace DateTimePicker with TimePicker for simpler time selection
- Add dark theme support for Vaadin component overlays (time picker, combo box)
- Update SettingsDialog with MutationObserver to propagate dark theme to overlays
- Update ObjectMapperService to handle LocalTime for TimePicker persistence

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>